dply-server/k8s-dply.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dply
  labels:
    name: dply
---
apiVersion: v1
kind: Service
metadata:
  name: dply-mysql-pods
  namespace: dply
  labels:
    app: dply-mysql
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: dply-mysql
---
apiVersion: v1
kind: Service
metadata:
  name: dply-mysql
  namespace: dply
  labels:
    app: dply-mysql
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: dply-mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dply-mysql
  namespace: dply
  labels:
    app: dply-mysql
spec:
  selector:
    matchLabels:
      app: dply-mysql
  serviceName: "dply-mysql"
  podManagementPolicy: Parallel
  replicas: 1
  template:
    metadata:
      labels:
        app: dply-mysql
    spec:
      containers:
      - image: mysql:8
        name: dply-mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: dply-mysql-pv-volume
          mountPath: /var/lib/mysql
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["mysql", "-h", "localhost", "-pmysql@dplytcl", "-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
  volumeClaimTemplates:
  - metadata:
      name: dply-mysql-pv-volume
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dply-server
  namespace: dply
  labels:
    app: dply-server
    app.kubernetes.io/name: dply-server
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/created-by: dionisius77
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: dply-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dply-server
        stack: go
    spec:
      imagePullSecrets:
        - name: dply-dockerhub-cred
      containers:
      - name: dply-server
        image: docker.io/dionisius77/dpyl-server:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 9090
          protocol: TCP
        - containerPort: 9800
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 100M
          requests:
            cpu: 100m
            memory: 100M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccount: dply-server
      serviceAccountName: dply-server
---
apiVersion: v1
kind: Service
metadata:
  name: dply-server
  namespace: dply
  labels:
    app: dply-server
    app.kubernetes.io/name: dply-server
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/created-by: dionisius77
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: grpc
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: dply-server
